Updated Poem page update styling

--- a/public/pages/poem.html
+++ b/public/pages/poem.html
@@ -16,7 +16,7 @@
   <body>
     <div class="container">
         <button id="home">Home</button>
-        <div class="row" id="updatePoem">
+        <div class="row homeBtn" id="updatePoem">
           
         </div>
     </div>
